@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.27';
+my $version = '1.28';
 ($libdir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -15,7 +15,7 @@ if (! -t STDIN) {  # not interactive, use defaults ...
 }
 
 if ($libdir) {
-	my $choice = &choose('Installing',
+	my $choice = &choose("Installing\n\n(Arrow-keys and Return, or q to quit)",
 	'using system default locations', 'interactively', 'Cancel');
 	if ($choice eq 'Cancel') { exit 0; }
 	if ($choice eq 'using system default locations') {
@@ -218,9 +218,9 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 3026,
-		'Changes', 1621,
+		'Changes', 1685,
 		'MANIFEST', 121,
-		'Clui.pm', 35133,
+		'Clui.pm', 36066,
 		'Clui/FileSelect.pm', 8844,
 		'examples/test_script', 7185,
 		'examples/login_shell', 4703,
