@@ -23,3 +23,4 @@
 20040809 1.25 'tput lines' tried before 'tput rows' for all OSs
 20041016 1.26 Install offers default locations as default to first-time users
 20041021 1.27 &choose handles multi-line question text
+20041107 1.28 EXPORT_OK routines documented and ALL tag defined
